# mdetr

./: main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
mdetr/: hubconf.py
mdetr/models/: mdetr.py
mdetr/scripts/: eval_clevr.py  eval_gqa.py
mdetr/scripts/fine_tuning/: subsample_lvis.py
